--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1>Jedot Holding Services</h1>
     </div>
     <nav>
-      <button>About</button>
-      <button>Contact</button>
-      <button>Services</button>
-      <button>Products</button>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+      <a href="products.html"><button>Products</button></a>
     </nav>
   </header>
 
