--- a/about.html
+++ b/about.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+      <a href="products.html"><button>Products</button></a>
+    </nav>
+  </header>
 
+  <main>
+    <section class="about">
+      <h2>About Us</h2>
+      <p>
+        <strong>Jedot Holding Services</strong> is a brand born from the shared passions, professions, and creativity of a mother and daughter duo — <strong>Dorothy</strong> and <strong>Jessica</strong>. The name <em>Jedot</em> combines the first two letters of Jessica (<em>Je</em>) and Dorothy (<em>Dot</em>), representing the unity of their talents and vision.
+      </p>
+      <p>
+        Rooted in artistic expression and professional expertise, Jedot offers a unique blend of services. Dorothy brings her experience as a certified accountant and assistant nurse, while Jessica contributes her creative gifts in music, fashion, and writing.
+      </p>
+      <p>
+        Their offerings include:
+        <ul>
+          <li>Styling and design of authentic African attire</li>
+          <li>Songwriting and music production with depth and purpose</li>
+          <li>Book writing drawn from instinct, experience, and personal growth</li>
+          <li>Support services in accounting, finance, and basic English tutoring</li>
+          <li>Compassionate nursing assistance</li>
+        </ul>
+      </p>
+      <p>
+        At Jedot, creativity meets purpose — combining artistry, care, and knowledge to serve with impact.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
