--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+      <a href="products.html"><button>Products</button></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p>If you’d like to reach out to us for inquiries, collaborations, or services, feel free to use the contact information below:</p>
+
+      <p><strong>Email:</strong> <a href="mailto:jedotholdingservices2025@gmail.com">jedotholdingservices2025@gmail.com</a></p>
+      <p><strong>Phone:</strong> +39 338 562 6903 or +39 320 235 9574</p>
+
+      <p>We look forward to hearing from you!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
