--- a/services.html
+++ b/services.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+      <a href="products.html"><button>Products</button></a>
+    </nav>
+  </header>
 
+  <main>
+    <section class="services">
+      <h2>Our Services</h2>
+      <ul style="list-style-type: disc; padding-left: 40px; text-align: left; max-width: 600px; margin: 0 auto;">
+        <li><strong>Nursing Assistance</strong> – Compassionate support and basic healthcare services from a qualified professional.</li>
+        <li><strong>Basic English Tutoring</strong> – One-on-one or small group sessions for building foundational English language skills.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
