--- a/books.html
+++ b/books.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jedot Books | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+      <a href="products.html"><button>Products</button></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="books">
+      <h2>Jedot Books</h2>
+      <p>At Jedot, our books are crafted with passion, purpose, and personal experience. They reflect a blend of creativity, real-life inspiration, and a desire to uplift others.</p>
+
+      <div class="book-list">
+        <!-- Example book item -->
+        <div class="book-item">
+          <h3>Coming Soon</h3>
+          <p>Stay tuned for our upcoming collection of original books from the Jedot team.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
