--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
     </nav>
   </header>
 
-  <main>
-    <section class="products">
-      <h2>Products</h2>
-      <div class="product-buttons">
-        <button>Jedot Books</button>
-        <button>Jedot Music</button>
-        <button>Jedot African Designers Clothes</button>
-      </div>
-      <div class="sub-products">
-        <h3>Clothing Categories</h3>
-        <button>Men</button>
-        <button>Women</button>
-      </div>
-    </section>
-  </main>
+<main>
+  <section class="products">
+    <h2>Products</h2>
+    <div class="product-buttons">
+      <a href="books.html"><button>Jedot Books</button></a>
+      <a href="music.html"><button>Jedot Music</button></a>
+      <a href="clothes.html"><button>Jedot African Designers Clothes</button></a>
+    </div>
+
+    <div class="sub-products">
+      <h3>Clothing Categories</h3>
+      <a href="male.html"><button>Men</button></a>
+      <a href="female.html"><button>Women</button></a>
+    </div>
+  </section>
+</main>
 
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
