--- a/books.html
+++ b/books.html
@@ -22,15 +22,10 @@
   <main>
     <section class="books">
       <h2>Jedot Books</h2>
-      <p>At Jedot, our books are crafted with passion, purpose, and personal experience. They reflect a blend of creativity, real-life inspiration, and a desire to uplift others.</p>
-
-      <div class="book-list">
-        <!-- Example book item -->
-        <div class="book-item">
-          <h3>Coming Soon</h3>
-          <p>Stay tuned for our upcoming collection of original books from the Jedot team.</p>
-        </div>
-      </div>
+      <p>
+        At Jedot, our books are more than just words — they are born from real-life experience, instinct, and the desire to inspire. Each book reflects the creative journey of Jessica and Dorothy, blending storytelling with spiritual, cultural, and personal depth.
+      </p>
+      <p><em>Our collection is coming soon. Stay tuned for titles, excerpts, and where to buy.</em></p>
     </section>
   </main>
 
@@ -39,4 +34,3 @@
   </footer>
 </body>
 </html>
-
