--- a/index.html
+++ b/index.html
@@ -24,16 +24,23 @@
     <div class="product-buttons">
       <a href="books.html"><button>Jedot Books</button></a>
       <a href="music.html"><button>Jedot Music</button></a>
-      <a href="clothes.html"><button>Jedot African Designers Clothes</button></a>
+      <button onclick="toggleClothing()">Jedot African Designers Clothes</button>
     </div>
 
-    <div class="sub-products">
+    <div id="clothing-sub" style="display: none; margin-top: 10px;">
       <h3>Clothing Categories</h3>
       <a href="male.html"><button>Men</button></a>
       <a href="female.html"><button>Women</button></a>
     </div>
   </section>
 </main>
+
+<script>
+  function toggleClothing() {
+    const section = document.getElementById("clothing-sub");
+    section.style.display = section.style.display === "none" ? "block" : "none";
+  }
+</script>
 
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
