--- a/female.html
+++ b/female.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Female Collection | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="female-clothes">
+      <h2>Female Collection</h2>
+      <p>Discover vibrant, bold, and elegant African styles created for confident women who love to stand out.</p>
+      <p><em>Our designs will be displayed soon — keep an eye out!</em></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
