--- a/music.html
+++ b/music.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jedot Music | Jedot Holding Services</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+    </div>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="music">
+      <h2>Jedot Music</h2>
+      <p>
+        Music at Jedot is crafted with emotion, purpose, and spiritual depth. Whether uplifting, soulful, or inspirational, our songs reflect real life, culture, and inner growth.
+      </p>
+      <p><em>Original songs and projects will be released soon — stay connected!</em></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
