--- a/about.html
+++ b/about.html
@@ -22,29 +22,29 @@
   <main>
     <section class="about">
       <h2>About Us</h2>
-      <p>
-        <strong>Jedot Holding Services</strong> is a brand born from the shared passions, professions, and creativity of a mother and daughter duo — <strong>Dorothy</strong> and <strong>Jessica</strong>. The name <em>Jedot</em> combines the first two letters of Jessica (<em>Je</em>) and Dorothy (<em>Dot</em>), representing the unity of their talents and vision.
-      </p>
-      <p>
-        Rooted in artistic expression and professional expertise, Jedot offers a unique blend of services. Dorothy brings her experience as a certified accountant and assistant nurse, while Jessica contributes her creative gifts in music, fashion, and writing.
-      </p>
-      <p>
-        Their offerings include:
-        <ul>
-          <li>Styling and design of authentic African attire</li>
-          <li>Songwriting and music production with depth and purpose</li>
-          <li>Book writing drawn from instinct, experience, and personal growth</li>
-          <li>Support services in accounting, finance, and basic English tutoring</li>
-          <li>Compassionate nursing assistance</li>
-        </ul>
-      </p>
-      <p>
-        At Jedot, creativity meets purpose — combining artistry, care, and knowledge to serve with impact.
-      </p>
+      <p><strong>Jedot Holding Services</strong> is a creative and service-driven brand founded by a mother and daughter duo — <strong>Dorothy</strong> and <strong>Jessica</strong> — who share a passion for both artistic expression and meaningful service. The name <em>Jedot</em> blends the first two letters of Jessica (<em>Je</em>) and Dorothy (<em>Dot</em>), symbolizing unity, creativity, and family.</p>
+
+      <p>Both founders are naturally artistic, expressing their creativity through fashion design, music, and writing. Professionally, Dorothy is a certified accountant and assistant nurse, while Jessica brings energy and originality through artistic pursuits and educational support.</p>
+
+      <p>Their services include:</p>
+      <ul style="list-style-type: disc; padding-left: 40px; text-align: left; max-width: 600px; margin: 0 auto;">
+        <li>Styling and creation of African designer clothing</li>
+        <li>Songwriting and music production with depth and purpose</li>
+        <li>Creative writing, including books inspired by life experience</li>
+        <li>Accounting and financial literacy support</li>
+        <li>Nursing assistance and basic English tutoring</li>
+      </ul>
+
+      <p>At Jedot Holding Services, artistry meets compassion and professionalism — blending skills, creativity, and care to serve with impact.</p>
     </section>
   </main>
 
   <footer>
+    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
   </footer>
 </body>
