--- a/female.html
+++ b/female.html
@@ -20,11 +20,36 @@
   </header>
 
   <main>
-    <section class="female-clothes">
-      <h2>Female Collection</h2>
-      <p>Discover vibrant, bold, and elegant African styles created for confident women who love to stand out.</p>
-      <p><em>Our designs will be displayed soon — keep an eye out!</em></p>
-    </section>
+   <section class="female-clothes">
+    <h2>Female Collection</h2>
+    <p>Explore our elegant African fashion — where culture, color, and confidence meet.</p>
+
+    <div class="gallery">
+      <div class="dress-item">
+        <img src="images/dress1.jpg" alt="Dress 1">
+        <p><strong>Bubu Ankara Blouse with Red Skirt</strong></p>
+        <p>Price: €40</p>
+      </div>
+
+      <div class="dress-item">
+        <img src="images/dress2.jpg" alt="Dress 2">
+        <p><strong>African Ankara Bubu Blouse with Limone Green Skirt</strong></p>
+        <p>Price: €40</p>
+      </div>
+
+      <div class="dress-item">
+        <img src="images/dress3.jpg" alt="Dress 3">
+        <p><strong>Yellow Butterfly Lace Top with Red Ankara Gown</strong></p>
+        <p>Price: €40</p>
+      </div>
+
+      <div class="dress-item">
+        <img src="images/dress4.jpg" alt="Dress 4">
+        <p><strong>Redwine Butterfly Lace Top with Horizontal-Step Ankara Gown</strong></p>
+        <p>Price: €40</p>
+      </div>
+    </div>
+   </section>
   </main>
 
   <footer>
