--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
+  <subtitle>Looking good is good business</subtitle>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
