--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
-  <subtitle>Looking good is good business</subtitle>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="hero">
       <h1>Jedot Holding Services</h1>
+      <p class="slogan">Looking good is good business</p>
     </div>
     <nav>
       <a href="about.html"><button>About</button></a>
