--- a/female.html
+++ b/female.html
@@ -33,7 +33,7 @@
 
       <div class="dress-item">
         <img src="images/dress2.jpg" alt="Dress 2">
-        <p><strong>African Ankara Bubu Blouse with Limone Green Skirt</strong></p>
+        <p><strong>African Ankara Bubu Blouse with Lemon Green Skirt</strong></p>
         <p>Price: €40</p>
       </div>
 
@@ -45,7 +45,7 @@
 
       <div class="dress-item">
         <img src="images/dress4.jpg" alt="Dress 4">
-        <p><strong>Redwine Butterfly Lace Top with Horizontal-Step Ankara Gown</strong></p>
+        <p><strong>Redwine Butterfly Lace Top and Ankara Gown with Horizontal Steps</strong></p>
         <p>Price: €40</p>
       </div>
     </div>
