--- a/female.html
+++ b/female.html
@@ -24,12 +24,14 @@
     <h2>Female Collection</h2>
     <p>Explore our elegant African fashion — where culture, color, and confidence meet.</p>
 
-    <div class="gallery">
-      <div class="dress-item">
-        <img src="images/dress1.jpg" alt="Dress 1">
-        <p><strong>Bubu Ankara Blouse with Red Skirt</strong></p>
-        <p>Price: €40</p>
-      </div>
+<div class="dress-item">
+  <img src="images/dress1.jpg" alt="Dress 1">
+  <p><strong>Bubu Ankara Blouse with Red Skirt</strong></p>
+  <p>Price: €40</p>
+  <a href="https://www.paypal.com/ncp/payment/ZSDGJWZACXMYE" target="_blank">
+    <button>Buy Now with PayPal</button>
+  </a>
+</div>
 
       <div class="dress-item">
         <img src="images/dress2.jpg" alt="Dress 2">
