--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
+  <script 
+  src="https://www.paypal.com/sdk/js?client-id=BAAV20Hq5RgkwWyEq88BE4s_GFP8REic49rgKGfrfeUkEE_i8uwPL9XH94ROBhZNxejzJ6TmAQzxNJ0yrM&components=hosted-buttons&disable-funding=venmo&currency=EUR">
+  </script>
 </head>
 <body>
   <header>
