--- a/female.html
+++ b/female.html
@@ -10,6 +10,7 @@
   <header>
     <div class="hero">
       <h1>Jedot Holding Services</h1>
+      <p class="slogan">Looking good is good business</p>
     </div>
     <nav>
       <a href="index.html"><button>Home</button></a>
@@ -20,38 +21,68 @@
   </header>
 
   <main>
-   <section class="female-clothes">
-    <h2>Female Collection</h2>
-    <p>Explore our elegant African fashion — where culture, color, and confidence meet.</p>
+    <section class="female-clothes">
+      <h2>Female Collection</h2>
+      <p>Explore our elegant African fashion — where culture, color, and confidence meet.</p>
 
-<div class="dress-item">
-  <img src="images/dress1.jpg" alt="Dress 1">
-  <p><strong>Bubu Ankara Blouse with Red Skirt</strong></p>
-  <p>Price: €40</p>
-  <a href="https://www.paypal.com/ncp/payment/ZSDGJWZACXMYE" target="_blank">
-    <button>Buy Now with PayPal</button>
-  </a>
-</div>
+      <div class="gallery">
+        <!-- Dress 1 -->
+        <div class="dress-item">
+          <img src="images/dress1.jpg" alt="Dress 1">
+          <p><strong>Bubu Ankara Blouse with Red Skirt</strong></p>
+          <p>Price: €50 (includes shipping)</p>
 
-      <div class="dress-item">
-        <img src="images/dress2.jpg" alt="Dress 2">
-        <p><strong>African Ankara Bubu Blouse with Lemon Green Skirt</strong></p>
-        <p>Price: €40</p>
+          <style>.pp-8R66SZLFMA9VG{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+          <form action="https://www.paypal.com/ncp/payment/8R66SZLFMA9VG" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+            <input class="pp-8R66SZLFMA9VG" type="submit" value="Buy Now" />
+            <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+            <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+          </form>
+        </div>
+
+        <!-- Dress 2 -->
+        <div class="dress-item">
+          <img src="images/dress2.jpg" alt="Dress 2">
+          <p><strong>African Ankara Bubu Blouse with Limone Green Skirt</strong></p>
+          <p>Price: €50 (includes shipping)</p>
+
+          <style>.pp-N2PHT85BPMRP6{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+          <form action="https://www.paypal.com/ncp/payment/N2PHT85BPMRP6" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+            <input class="pp-N2PHT85BPMRP6" type="submit" value="Buy Now" />
+            <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+            <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+          </form>
+        </div>
+
+        <!-- Dress 3 -->
+        <div class="dress-item">
+          <img src="images/dress3.jpg" alt="Dress 3">
+          <p><strong>Yellow Butterfly Lace Top with Red Ankara Gown</strong></p>
+          <p>Price: €50 (includes shipping)</p>
+
+          <style>.pp-RHHG8WD3DTJ9S{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+          <form action="https://www.paypal.com/ncp/payment/RHHG8WD3DTJ9S" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+            <input class="pp-RHHG8WD3DTJ9S" type="submit" value="Buy Now" />
+            <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+            <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+          </form>
+        </div>
+
+        <!-- Dress 4 -->
+        <div class="dress-item">
+          <img src="images/dress4.jpg" alt="Dress 4">
+          <p><strong>Redwine Butterfly Lace Top with Horizontal-Step Ankara Gown</strong></p>
+          <p>Price: €50 (includes shipping)</p>
+
+          <style>.pp-TVXXSW32B67GC{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+          <form action="https://www.paypal.com/ncp/payment/TVXXSW32B67GC" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+            <input class="pp-TVXXSW32B67GC" type="submit" value="Buy Now" />
+            <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+            <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+          </form>
+        </div>
       </div>
-
-      <div class="dress-item">
-        <img src="images/dress3.jpg" alt="Dress 3">
-        <p><strong>Yellow Butterfly Lace Top with Red Ankara Gown</strong></p>
-        <p>Price: €40</p>
-      </div>
-
-      <div class="dress-item">
-        <img src="images/dress4.jpg" alt="Dress 4">
-        <p><strong>Redwine Butterfly Lace Top and Ankara Gown with Horizontal Steps</strong></p>
-        <p>Price: €40</p>
-      </div>
-    </div>
-   </section>
+    </section>
   </main>
 
   <footer>
@@ -59,4 +90,3 @@
   </footer>
 </body>
 </html>
-
