--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="JEDOT logo.png" type="image/x-icon">
+  <meta property="og:title" content="Jedot Holding Services">
+  <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOT logo.png">
+  <meta property="og:url" content="https://jedotholdingservices.com">
+  <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
   <header>
