--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="JEDOT logo.png" type="image/x-icon">
+  <link rel="icon" href="images/JEDOT logo.png" type="image/png">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
   <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOT logo.png">
