--- a/books.html
+++ b/books.html
@@ -28,35 +28,49 @@
   </header>
 
   <main>
-    <section class="books">
-      <h2>Jedot Books</h2>
-      <p>
-        At Jedot, our books are more than just words — they are born from real-life experience, instinct, and the desire to inspire. Each book reflects the creative journey of Jessica and Dorothy, blending storytelling with spiritual, cultural, and personal depth.
-      </p>
+  <section class="books">
+    <h2>Jedot Books</h2>
+    <p>Browse and borrow our original titles, written with heart, wisdom, and creativity.</p>
 
-      <div class="book-listing">
-        <div class="book-item">
-          <h3>Skinflint</h3>
-          <p class="price">Buy: €6.80 | Borrow (1 month): €2.80</p>
-          <div class="buttons">
-            <a href="/mnt/data/skinflint/skinflint-STANDARD.pdf" download>Download Sample</a>
-            <a href="#" class="buy">Buy Now</a>
-            <a href="#" class="borrow">Borrow</a>
-          </div>
-        </div>
+    <div class="book-list" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
 
-        <div class="book-item">
-          <h3>Bothersome Kate</h3>
-          <p class="price">Buy: €6.80 | Borrow (1 month): €2.80</p>
-          <div class="buttons">
-            <a href="/mnt/data/bothersome_kate/bothersome-kate-STANDARD.pdf" download>Download Sample</a>
-            <a href="#" class="buy">Buy Now</a>
-            <a href="#" class="borrow">Borrow</a>
-          </div>
-        </div>
+      <!-- Book 1: Bothersome Kate -->
+      <div class="book-item" style="width: 300px; text-align: center;">
+        <img src="images/bothersome-kate.jpg" alt="Bothersome Kate" style="width: 100%; border-radius: 8px;">
+        <h3>Bothersome Kate</h3>
+        <p>A story of a determined young girl who challenges tradition and expectations in pursuit of freedom and purpose.</p>
+        <p><strong>To borrow: €5</strong></p>
+
+        <style>.pp-9MSE486H5P9RE{...}</style>
+        <form action="https://www.paypal.com/ncp/payment/9MSE486H5P9RE" method="post" target="_blank" style="...">
+          <input class="pp-9MSE486H5P9RE" type="submit" value="Pay Now" />
+          <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+          <section style="font-size: 0.75rem;">
+            Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem; vertical-align:middle;" />
+          </section>
+        </form>
       </div>
-    </section>
-  </main>
+
+      <!-- Book 2: The Skinflint -->
+      <div class="book-item" style="width: 300px; text-align: center;">
+        <img src="images/skinflint.jpg" alt="The Skinflint" style="width: 100%; border-radius: 8px;">
+        <h3>The Skinflint</h3>
+        <p>An emotional and thought-provoking journey through the eyes of a man ruled by money, and what it costs him in return.</p>
+        <p><strong>To borrow: €5</strong></p>
+
+        <style>.pp-HTNRBYZ7PE4MA{...}</style>
+        <form action="https://www.paypal.com/ncp/payment/HTNRBYZ7PE4MA" method="post" target="_blank" style="...">
+          <input class="pp-HTNRBYZ7PE4MA" type="submit" value="Pay Now" />
+          <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+          <section style="font-size: 0.75rem;">
+            Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem; vertical-align:middle;" />
+          </section>
+        </form>
+      </div>
+
+    </div>
+  </section>
+</main>
 
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
