--- a/books.html
+++ b/books.html
@@ -36,10 +36,10 @@
 
       <!-- Book 1: Bothersome Kate -->
       <div class="book-item" style="width: 300px; text-align: center;">
-        <img src="images/bothersome-kate.jpg" alt="Bothersome Kate" style="width: 100%; border-radius: 8px;">
+        <img src="images/Bothersome Kate cover.png" alt="Bothersome Kate" style="width: 100%; border-radius: 8px;">
         <h3>Bothersome Kate</h3>
         <p>A story of a determined young girl who challenges tradition and expectations in pursuit of freedom and purpose.</p>
-        <p><strong>To borrow: €5</strong></p>
+        <p><strong>To borrow: €2,80</strong></p>
 
         <style>.pp-9MSE486H5P9RE{...}</style>
         <form action="https://www.paypal.com/ncp/payment/9MSE486H5P9RE" method="post" target="_blank" style="...">
@@ -53,10 +53,10 @@
 
       <!-- Book 2: The Skinflint -->
       <div class="book-item" style="width: 300px; text-align: center;">
-        <img src="images/skinflint.jpg" alt="The Skinflint" style="width: 100%; border-radius: 8px;">
+        <img src="images/The Skinflint cover.png" alt="The Skinflint" style="width: 100%; border-radius: 8px;">
         <h3>The Skinflint</h3>
         <p>An emotional and thought-provoking journey through the eyes of a man ruled by money, and what it costs him in return.</p>
-        <p><strong>To borrow: €5</strong></p>
+        <p><strong>To borrow: €2,80</strong></p>
 
         <style>.pp-HTNRBYZ7PE4MA{...}</style>
         <form action="https://www.paypal.com/ncp/payment/HTNRBYZ7PE4MA" method="post" target="_blank" style="...">
