--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
-  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOT logo.png">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOTlogo.jpg">
   <meta property="og:url" content="https://jedotholdingservices.com">
   <meta name="twitter:card" content="summary_large_image">
 </head>
