--- a/books.html
+++ b/books.html
@@ -35,40 +35,73 @@
     <div class="book-list" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
 
       <!-- Book 1: Bothersome Kate -->
-      <div class="book-item" style="width: 300px; text-align: center;">
-        <img src="images/BothersomeKatecover.jpg" alt="Bothersome Kate" style="width: 100%; border-radius: 8px;">
-        <h3>Bothersome Kate</h3>
-        <p>A story of a determined young girl who challenges tradition and expectations in pursuit of freedom and purpose.</p>
-        <p><strong>To borrow: €2,80</strong></p>
+      <div class="book-item" style="width: 320px; border: 1px solid #ccc; border-radius: 8px; padding: 15px; margin: 10px; text-align: center;">
+  <img src="images/BothersomeKatecover.jpg" alt="Bothersome Kate" style="width: 100%; border-radius: 6px;">
+  <h3 style="margin-top: 10px;">Bothersome Kate</h3>
+  <p style="font-style: italic;">By Dorothy Ifeanyi Makasi</p>
+  <p>Bothersome Kate is a humorous and heartwarming story about a Nigerian girl with a big mouth, a bold spirit, and a knack for turning every moment into a memorable one. From the day she was born, Kate’s fiery personality captured attention—and not always in the best way.
+At school, she’s the self-appointed class reporter. At home, she questions every adult decision. And in church? Let’s just say even the pastor isn’t safe from her blunt observations. But beneath her chatter and mischief lies a clever, confident girl who sees the world a little differently—and isn’t afraid to say so.
+Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl energy, cultural pride, and the hilarious chaos of childhood. Perfect for readers who enjoy strong characters, playful storytelling, and vibrant Nigerian settings.
+</p>
+  <p><strong>eBook format (PDF)</strong></p>
 
-        <style>.pp-9MSE486H5P9RE{...}</style>
-        <form action="https://www.paypal.com/ncp/payment/9MSE486H5P9RE" method="post" target="_blank" style="...">
-          <input class="pp-9MSE486H5P9RE" type="submit" value="Pay Now" />
-          <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
-          <section style="font-size: 0.75rem;">
-            Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem; vertical-align:middle;" />
-          </section>
-        </form>
-      </div>
+  <!-- Borrow for 2 weeks -->
+  <div style="margin-top: 15px;">
+    <p><strong>Borrow for 2 weeks – €2.80</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/9MSE486H5P9RE" method="post" target="_blank">
+      <input type="submit" value="Pay €2.80" style="background-color: #2196F3; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
+
+  <!-- Borrow for 4 weeks -->
+  <div style="margin-top: 10px;">
+    <p><strong>Borrow for 4 weeks – €5.00</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/9N2G44MGBB4SY" method="post" target="_blank">
+      <input type="submit" value="Pay €5.00" style="background-color: #0b7dda; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
+
+  <!-- Buy and keep forever -->
+  <div style="margin-top: 10px;">
+    <p><strong>Buy eBook (Forever) – €5.80</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/T2DTEC45B5R8S" method="post" target="_blank">
+      <input type="submit" value="Pay €5.80" style="background-color: #4CAF50; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
+</div>
 
       <!-- Book 2: The Skinflint -->
-      <div class="book-item" style="width: 300px; text-align: center;">
-        <img src="images/TheSkinflintcover.jpg" alt="The Skinflint" style="width: 100%; border-radius: 8px;">
-        <h3>The Skinflint</h3>
-        <p>An emotional and thought-provoking journey through the eyes of a man ruled by money, and what it costs him in return.</p>
-        <p><strong>To borrow: €2,80</strong></p>
+      <div class="book-item" style="width: 320px; border: 1px solid #ccc; border-radius: 8px; padding: 15px; margin: 10px; text-align: center;">
+  <img src="images/TheSkinflintcover.jpg" alt="The Skinflint" style="width: 100%; border-radius: 6px;">
+  <h3 style="margin-top: 10px;">The Skinflint</h3>
+  <p style="font-style: italic;">By Dorothy Ifeanyi Makasi</p>
+  <p>A bold girl challenges cultural expectations in this heartfelt story about identity and courage.</p>
+  <p><strong>eBook format (PDF)</strong></p>
 
-        <style>.pp-HTNRBYZ7PE4MA{...}</style>
-        <form action="https://www.paypal.com/ncp/payment/HTNRBYZ7PE4MA" method="post" target="_blank" style="...">
-          <input class="pp-HTNRBYZ7PE4MA" type="submit" value="Pay Now" />
-          <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
-          <section style="font-size: 0.75rem;">
-            Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem; vertical-align:middle;" />
-          </section>
-        </form>
-      </div>
+  <!-- Borrow for 2 weeks -->
+  <div style="margin-top: 15px;">
+    <p><strong>Borrow for 2 weeks – €2.80</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/HTNRBYZ7PE4MA" method="post" target="_blank">
+      <input type="submit" value="Pay €2.80" style="background-color: #2196F3; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
 
-    </div>
+  <!-- Borrow for 4 weeks -->
+  <div style="margin-top: 10px;">
+    <p><strong>Borrow for 4 weeks – €5.00</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/J2LLGFZ2SBLYG" method="post" target="_blank">
+      <input type="submit" value="Pay €5.00" style="background-color: #0b7dda; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
+
+  <!-- Buy and keep forever -->
+  <div style="margin-top: 10px;">
+    <p><strong>Buy eBook (Forever) – €5.80</strong></p>
+    <form action="https://www.paypal.com/ncp/payment/XHJQ2QSNFK47C" method="post" target="_blank">
+      <input type="submit" value="Pay €5.80" style="background-color: #4CAF50; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+    </form>
+  </div>
+</div>
   </section>
 </main>
 
