--- a/books.html
+++ b/books.html
@@ -75,7 +75,7 @@ Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl
   <img src="images/TheSkinflintcover.jpg" alt="The Skinflint" style="width: 100%; border-radius: 6px;">
   <h3 style="margin-top: 10px;">The Skinflint</h3>
   <p style="font-style: italic;">By Dorothy Ifeanyi Makasi</p>
-  <p>A bold girl challenges cultural expectations in this heartfelt story about identity and courage.</p>
+  <p>Mr. Odiegwu is a man of ambition, charm, and complexity. In a society riddled with inequality, his cunning survival instincts drive him through a series of morally ambiguous ventures. As he chases wealth and status by any means necessary, he navigates deception, manipulation, and unexpected consequences. "The Skinflint" is a thought-provoking tale of ambition and morality, exposing the cost of success when conscience is set aside. Captivating and bold, this novel explores the thin line between desperation and determination.</p>
   <p><strong>eBook format (PDF)</strong></p>
 
   <!-- Borrow for 2 weeks -->
