--- a/books.html
+++ b/books.html
@@ -39,9 +39,14 @@
   <img src="images/BothersomeKatecover.jpg" alt="Bothersome Kate" style="width: 100%; border-radius: 6px;">
   <h3 style="margin-top: 10px;">Bothersome Kate</h3>
   <p style="font-style: italic;">By Dorothy Ifeanyi Makasi</p>
-  <p>Bothersome Kate is a humorous and heartwarming story about a Nigerian girl with a big mouth, a bold spirit, and a knack for turning every moment into a memorable one. From the day she was born, Kate’s fiery personality captured attention—and not always in the best way.
-At school, she’s the self-appointed class reporter. At home, she questions every adult decision. And in church? Let’s just say even the pastor isn’t safe from her blunt observations. But beneath her chatter and mischief lies a clever, confident girl who sees the world a little differently—and isn’t afraid to say so.
-Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl energy, cultural pride, and the hilarious chaos of childhood. Perfect for readers who enjoy strong characters, playful storytelling, and vibrant Nigerian settings.
+  <p>
+  Bothersome Kate is a humorous and heartwarming story about a Nigerian girl with a big mouth, a bold spirit, and a knack for turning every moment into a memorable one.
+</p>
+<p>
+  At school, she’s the self-appointed class reporter. At home, she questions every adult decision. And in church? Let’s just say even the pastor isn’t safe from her blunt observations.
+</p>
+<p>
+  Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl energy, cultural pride, and the hilarious chaos of childhood.
 </p>
   <p><strong>eBook format (PDF)</strong></p>
 
@@ -49,7 +54,7 @@ Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl
   <div style="margin-top: 15px;">
     <p><strong>Borrow for 2 weeks – €2.80</strong></p>
     <form action="https://www.paypal.com/ncp/payment/9MSE486H5P9RE" method="post" target="_blank">
-      <input type="submit" value="Pay €2.80" style="background-color: #2196F3; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
+      <input type="submit" value="Pay €2.80" aria-label="Borrow Bothersome Kate for 2 weeks" style="background-color: #2196F3; color: white; border: none; padding: 8px 16px; border-radius: 5px;">
     </form>
   </div>
 
@@ -102,6 +107,7 @@ Written with wit and warmth, Bothersome Kate is a celebration of bold Black girl
     </form>
   </div>
 </div>
+    </div>
   </section>
 </main>
 
